Ficheiros estao no sitio certo, inicio de pubB10 ish

--- a/Trabalho Versao 1/Trabalho Versao 1.vcxproj
+++ b/Trabalho Versao 1/Trabalho Versao 1.vcxproj
@@ -160,6 +160,11 @@
     <ClInclude Include="Transaction.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="c.txt" />
+    <Text Include="p.txt" />
+    <Text Include="t.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
